--- a/info/TODO.org
+++ b/info/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-03-28>
+#+DATE: Time-stamp: <2020-03-29>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -35,6 +35,10 @@
      - only up to 3 *** levels! configurable?
      - info doesn't have links, yet
      - info doesn't know about clickablefunction links
+       - (describe-package 'helpful)
+         [1]  https://github.com/wilfred/helpful
+	 > Similarly, help-fns+.el.
+         > There you have option `help-cross-reference-manuals':
      - customise system (explain `M-x customize-set-value' as long as
        (debbugs-gnu-bugs 25678) is not solved)
      - do we need a short help, yes for installation + config + first
