--- a/info/apdl-config.org
+++ b/info/apdl-config.org
@@ -142,7 +142,7 @@ sign in this language is ~;~ (one semi-colon `;').
 	 (t ;This an example of an installation directory on WINDOWS
 	  ;; Emacs is using here forward slashes as under Unix and not
 	  ;; the backslash "\"!
-	  (setq apdl-ansys-install-directory "D:/Ansys Inc/v201/"))
+	  (setq apdl-ansys-install-directory "D:/Ansys Inc/v201/")))
 	  ;; default: "C:/Program Files/Ansys Inc/v201/"
    #+END_SRC
 
@@ -265,7 +265,7 @@ sign in this language is ~;~ (one semi-colon `;').
     ;; You might use this variable to create you own templates
     ;; in `apdl-wb-template.el'.
 
-    (setq apdl-wb-custom-template-directory "c:/my_macros/" ; new in 20.4.0
+    (setq apdl-wb-custom-template-directory "c:/my_macros/") ; new in 20.4.0
 
     ;;  APDL-Mode mode configures the following variable from the
     ;;  evironment to show your license usage in
